--- a/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -1,46 +1,47 @@
 ---
   layout: "post"
-  title: "Smart country: innovation, tolerance and sustainability"
-  excerpt: "Increasing social innovation means \"aligning values and giving explanations.\""
+  title: "Smart Nation: Innovation, Inclusion, Sustainability"
+  excerpt: "The emphasis is on alignment and accountability, whereby good ideas are taken seriously."
   image: "/assets/imgs/sustainability-3300869_1280.jpg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
+As some of you know, I was supposed to attend the Tokyo Olympics, but unfortunately, I couldn't make it because of the pandemic; the silver lining, though, is that I have made some friends who are interested in sports, have gained a lot of knowledge about the games, and feel like I have come to a real understanding the Olympic motto: “Faster! Higher! Stronger!”
 
-You may know that I was originally going to attend the Tokyo Olympics, but I failed to make it in order to cooperate with the Olympic Games' epidemic prevention. Fortunately, I have also met more friends who care about sports, gained a lot of sports knowledge, and can better understand the Olympic motto: "Faster, Higher, Stronger". 
+Or, I should say, “Faster! Higher! Stronger! Together!”, after the International Olympic Committee’s (IOC) decision to include an expression of unity. 
 
-In response to the recent decision of the International Olympic Games, I should now say: "Faster, Higher, Stronger — Together!" 
+The same motto applies to the field of digital development. In the past, to strive for “faster, higher, and stronger” tech, many countries did their utmost to offer the most advanced facilities and services, to develop the most cutting-edge technologies, and to nurture high-tech “unicorns.” But more and more countries are finding that digital governance policies and promotion strategies are, like the Olympic spirit, not just about nurturing medalists, but also about bringing people together.
 
-We can see the same development in the field of digital governance. In the past, many countries continued to pursue "faster, higher, and stronger" technology, and made every effort to build the most advanced facilities, introduce the most cutting-edge technology, and foster high-tech industrial unicorns. However, more and more countries have discovered that digital governance, like the Olympic spirit, not only needs to cultivate individual players, but also allows all people to participate. 
+President Tsai announced the platform of “Digital Nation, Smart Island” during her election campaign, and the Executive Yuan in 2017 launched the Digital Nation and Innovative Economic Development Program (DIGI⁺). After her successful re-election, it was upgraded to the Smart Nation Program this year, with the vision of a smart nation for innovation, inclusion, and sustainability by 2030.
 
-President Tsai proposed the "Digital Nation, Smart Island" policy program during his campaign. The Executive Yuan launched the "Digital Nation. Innovative Economic Development Program" in 2017. After the president was re-elected, he was upgraded to the "Smart Nation Program" this year, with the development vision of "Achieving an innovative, inclusive, and sustainable smart country by 2030". 
+The vision of Smart Nation 2030 reveals a new direction for digital governance policy. Any innovation in a modern world must be pluralistic and inclusive, with sustainable development as its goal. This means that it is no longer the case that the government is formulating policies from the top down — dictating new development paths for industries and directing people to new public services — but rather is receptive to building ecosystems of public-private partnerships to address problems, guided by the needs of the people.
 
-The vision of Smart Country 2030 reveals a new digital governance policy: any innovation must take diversity and tolerance as the connotation and sustainable development as the goal, which means that the government no longer formulates policies and leads from the top down The development path of industry and harmony is guided by social needs and creates an ecosystem that solves problems through "citizen partnership". 
+Some people may wonder how to cater to the needs of members of the public in our diverse and rapidly evolving society and whether problems may arise as some issues are prioritized over others, but if we look back at the history of digital development, we can see that the internet was not created by an international organization or country setting standards and then building a system for people to use, but by people of all stripes, scattered around the world, working together to establish a network that connects people to each other. On this shared system, they engaged in an iterative problem-solving process of inventing protocols according to their own needs, before gradually forming the internet as we now know it, which is now indispensable for social, economic, and political activity in every corner of the world, and in a constant state of evolution as the needs of its users change.
 
-Some people may wonder: With such a diverse society and constantly changing circumstances, how can we cater to the needs of the people without losing sight of the other? If we look back at the history of digital development, in the case of the Internet, it is not originally a single international organization that issues orders, sets standards, and builds systems for people to use. It is the people of all kinds scattered around the world who work together to build a network that connects each other. On this shared system, they invent agreements and improve problems according to their own needs, and then gradually form today's Internet. Every corner of the world, regardless of social, economic or political activities, is indispensable, and it is still vigorous and constantly innovating. 
+Indeed, in a pluralistic society, people's needs are ever shifting, and regardless of whether governments are willing to address them, there will always be people willing to tackle new problems with digital innovation. A smart national digital governance policy should not be designed to dominate or prohibit these attempts, but to find ways to align with them, which I believe is the first aspect of digital governance: alignment.
 
-In a diverse society, the needs of the people naturally continue to emerge. Regardless of whether the government has a corresponding strategy, there are always talented people who will use digital innovation to solve problems. Smart national digital governance policies should not lead or even prohibit these attempts, but find ways to combine the contributions of all parties and find common values. This is what I think is the first concept of digital governance: Alignment. 
+When the COVID-19 outbreak struck last year, masks, the most essential personal protective equipment, were in short supply and the central government had to adopt a “real name registration system” for ordering face masks. Everyone wanted to know where to buy them, though, and “mask map” applications quickly appeared; the government didn't discourage such efforts, but instead released the addresses of pharmacies selling masks and the number of masks they had in stock through open data, keeping the apps up to date. In less than a week, more than a hundred map applications for mask availability were developed by people from all walks of life, with a wide range of configurations for use on the messaging app LINE and with voice assistance options for the blind. In other words, an alliance was forged between government and the private sector, which allowed us to meet the diverse needs of the largest possible swathe of the population in the shortest possible time, and at the lowest possible cost.
 
-For example, at the beginning of last year’s epidemic, masks were the most basic personal epidemic prevention equipment, which fell into a supply-demand imbalance for a while. The government must adopt real-name sales. Everyone wanted to know where to buy masks. Soon someone developed a map of export masks. The government did not prevent this. Instead, it used open information to immediately release the address of the pharmacy selling masks and the stock of masks in each pharmacy, and it was constantly updated. In less than a week, there were more than one hundred mask map programs developed by all walks of life, with a variety of composition, which can also be used in the communication software LINE, and voice assistance for blind people is provided. In other words, the alliance between the government and the private sector can meet the most diverse needs in the shortest time and at the least cost. 
+When Taiwan was hit by a wave of infections in May this year, the Central Epidemic Command Center (CECC) issued a nationwide level 3 COVID-19 alert, requiring contact information to be supplied when entering and leaving public venues to facilitate accurate contact tracing and notifications should that be needed.
 
-Taiwan suffered a severe epidemic in May this year. The central command center adopted strict three-level alert, requiring that you must leave contact information when entering and exiting public places, and only when necessary, accurate epidemic investigation and contact notifications can be made. The so-called "substantial joint system." 
+However, the long queues for registration with paper-and-pencil at each shop can be both time-consuming counterproductive in terms of virus prevention measures as the wait increases exposure time in public, so people began discussing various digital solutions, while businesses introduced their own apps for registration. From these discussions and the apps developed by the private sector, the government was able to tell what was working and what was not, and was thus able to roll out the “1922 SMS” check-in system in the shortest possible time.
 
-However, registering with pen and paper at each store may lead to long queues, which not only takes time, but also carries the risk of cluster infection. As a result, the private community began to discuss various digital solutions, and some businesses launched their own connected apps. From these discussions and private apps, the government can know what is feasible and what is not. The "1922 Short Message System" came into being in the shortest time. 
+“1922 SMS” was not mandated by the central government but soon became part of people's lives. The innovative design by the g0v (gov-zero) civic tech community proved invaluable — simply scan a QR code using the built-in smartphone camera and send the text message to 1922; no apps required.
 
-Although the government did not mandate its use, the "1922 Short Message System" soon became a part of people's lives because it combined the ingenuity of the "g0v (zero-time government)" citizen technology community: no need Install the new App, just scan the QR Code and send the text message, two actions can be completed. It is not only convenient, but also solves many worries of the public: For example, what if there is no internet? As long as you can send text messages; what if you don’t have a mobile phone? The original paper registration can still be used. 
+Not only is this convenient, but it also addresses many of the concerns of the public: what if I don't have internet access? A text message will suffice. What if I don't have a mobile phone? You can still choose to write your contact information down on paper. 
 
-The public are especially concerned about how to store and use the huge personal data of the "SMS" system? It is stored in the telecommunications company contracted by each person’s own number, and can only be accessed within the scope of the epidemic; users can [query access records](https://sms.1922.gov.tw/), the stored data will be deleted automatically after 28 days. all the above practices reflect the second concept of digital governance: accountability (an explanation is given). 
+With the SMS system, how do we store the huge amount of data being transmitted on a daily basis, though? It is stored with the telecom company providing the user’s phone service and can only be accessed by contact tracers — you can request a full audit of your own records — and the information is deleted after 28 days. All of these considerations are reflected in the second aspect of digital governance: accountability.
 
-The key point of this concept is that digital innovation should not only save time and effort, but also make people feel at ease and not infringe on personal privacy due to digitization. In digital development, personal information protection and information security have been paid more and more attention to, and this is the reason. 
+Accountability in digital innovation puts people's minds at ease as it inspires confidence that digital products will do what they say they will in ways that do not compromise user privacy; this is why personal data protection and cyber security are becoming increasingly important in digital development.
 
-On the other hand, when new challenges occur, we must also improve in time. For example, a judge later found out that the documentary evidence contained information about the fact-linked system during the criminal investigation process and questioned its legitimacy. After discussion by all parties, the Ministry of Law also explained that the SMS system is not a private communication, and it is not within the scope of access or monitoring by the Communication Security Supervision Law; telecommunications institutions and judicial organs will also take specific measures to exclude communication monitoring from touching the SMS system. data of. 
+Moreover, accountability can ensure that improvements are made on a rolling basis as new challenges arise; for example, a judge found that evidence in a criminal investigation included data from the 1922 text messaging system and questioned its legality. Following discussions, the Ministry of Justice concluded that the 1922 SMS system does not constitute a private communication and should not be accessed as per the Communication Security and Surveillance Act.
 
-As a strategy for national digital development, "aligning values and giving explanations" not only eliminates doubts, but also gives people peace of mind, and more actively realizes the results of citizen partnership. For example, this year’s fourth President’s Cup hackathon, regardless of the social sector, governance sector, and economic sector, can come up with innovative methods, connect data across fields, and use digital technology to solve social problems. The Presidents Cup hackathon does not provide bonuses, but for the winning teams, the president promised that the government will make every effort to promote and incorporate policy measures. More teams, with the assistance of the government, find opportunities for commercial applications. 
+Following this interpretation, specific measures have now been taken by telecommunications companies and the judiciary to preclude communications surveillance from accessing the SMS data.
 
-As a "digital political commissar", what digital means to me is to strengthen the connection between people and increase social innovation, that is, "Alignment & Accountability"-someone proposed Good ideas will be taken seriously, and partners can be found to work together to achieve them. Only in this way can a good cycle form innovative, inclusive and sustainable digital development. 
+As part of a national strategy for digital development, accountability is both a passive way to allay concerns and provide peace of mind and an active way to make the results of public-private partnerships a reality. For example, our Presidential Hackathon, which is entering its fourth year, serves as an opportunity for the public and private sectors to work together to come up with innovative ways of linking data across sectors and use digital technology to resolve social problems. The Presidential Hackathon does not offer prize money, but the systems designed by winning teams are assured government promotion, the team is invited to be part of government initiatives, and government assistance is offered to find opportunities for commercial application.
 
-In other words, only when people across departments, fields, and fields can stand together, can digital development be "Faster, Higher, Stronger" —— Together.
+As Taiwan’s digital minister, what digital means foremost to me is stimulation of social innovation by increasing the connections between people through technology. In other words, the emphasis is on alignment and accountability, whereby good ideas are taken seriously, and partners can be sought out to work together, establishing a virtuous cycle that leads to innovative, inclusive, and sustainable digital development. To put it in another way, only when people from different sectors, fields, and roles join forces can our digital development be faster, higher, and stronger— together.
