--- a/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -34,7 +34,7 @@ However, the long queues for registration with paper-and-pencil at each shop can
 
 Not only is this convenient, but it also addresses many of the concerns of the public: what if I don't have internet access? A text message will suffice. What if I don't have a mobile phone? You can still choose to write your contact information down on paper. 
 
-With the SMS system, how do we store the huge amount of data being transmitted on a daily basis, though? It is stored with the telecom company providing the user’s phone service and can only be accessed by contact tracers — you can request a full audit of your own records — and the information is deleted after 28 days. All of these considerations are reflected in the second aspect of digital governance: accountability.
+With the SMS system, how do we store the huge amount of data being transmitted on a daily basis, though? It is stored with the telecom company providing the user’s phone service and can only be accessed by contact tracers — you can [request a full audit](https://sms.1922.gov.tw/) of accesses to your own records — and the information is deleted after 28 days. All of these considerations are reflected in the second aspect of digital governance: accountability.
 
 Accountability in digital innovation puts people's minds at ease as it inspires confidence that digital products will do what they say they will in ways that do not compromise user privacy; this is why personal data protection and cyber security are becoming increasingly important in digital development.
 
