--- a/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -18,13 +18,13 @@ The same motto applies to the field of digital development. In the past, to stri
 
 President Tsai announced the platform of “Digital Nation, Smart Island” during her election campaign, and the Executive Yuan in 2017 launched the Digital Nation and Innovative Economic Development Program (DIGI⁺). After her successful re-election, it was upgraded to the Smart Nation Program this year, with the vision of a smart nation for innovation, inclusion, and sustainability by 2030.
 
-The vision of Smart Nation 2030 reveals a new direction for digital governance policy. Any innovation in a modern world must be pluralistic and inclusive, with sustainable development as its goal. This means that it is no longer the case that the government is formulating policies from the top down — dictating new development paths for industries and directing people to new public services — but rather is receptive to building ecosystems of public-private partnerships to address problems, guided by the needs of the people.
+The vision of Smart Nation 2030 reveals a new direction for digital governance policy. Any innovation in a modern world must be pluralistic and inclusive, with sustainable development as its goal. This means that it is no longer the case that the government is formulating policies from the top down — dictating new development paths for industries and directing people to new public services — but rather is receptive to building ecosystems of people-public-private partnerships to address problems, guided by the needs of the people.
 
 Some people may wonder how to cater to the needs of members of the public in our diverse and rapidly evolving society and whether problems may arise as some issues are prioritized over others, but if we look back at the history of digital development, we can see that the internet was not created by an international organization or country setting standards and then building a system for people to use, but by people of all stripes, scattered around the world, working together to establish a network that connects people to each other. On this shared system, they engaged in an iterative problem-solving process of inventing protocols according to their own needs, before gradually forming the internet as we now know it, which is now indispensable for social, economic, and political activity in every corner of the world, and in a constant state of evolution as the needs of its users change.
 
 Indeed, in a pluralistic society, people's needs are ever shifting, and regardless of whether governments are willing to address them, there will always be people willing to tackle new problems with digital innovation. A smart national digital governance policy should not be designed to dominate or prohibit these attempts, but to find ways to align with them, which I believe is the first aspect of digital governance: alignment.
 
-When the COVID-19 outbreak struck last year, masks, the most essential personal protective equipment, were in short supply and the central government had to adopt a “real name registration system” for ordering face masks. Everyone wanted to know where to buy them, though, and “mask map” applications quickly appeared; the government didn't discourage such efforts, but instead released the addresses of pharmacies selling masks and the number of masks they had in stock through open data, keeping the apps up to date. In less than a week, more than a hundred map applications for mask availability were developed by people from all walks of life, with a wide range of configurations for use on the messaging app LINE and with voice assistance options for the blind. In other words, an alliance was forged between government and the private sector, which allowed us to meet the diverse needs of the largest possible swathe of the population in the shortest possible time, and at the lowest possible cost.
+When the COVID-19 outbreak struck last year, masks, the most essential personal protective equipment, were in short supply and the central government had to adopt a “real name registration system” for ordering face masks. Everyone wanted to know where to buy them, though, and “mask map” applications quickly appeared; the government didn't discourage such efforts, but instead released the addresses of pharmacies selling masks and the number of masks they had in stock through open data, keeping the apps up to date. In less than a week, more than a hundred map applications for mask availability were developed by people from all walks of life, with a wide range of configurations for use on the messaging app LINE and with voice assistance options for the blind. In other words, an alliance was forged between government, civic technologists, and the private sector, which allowed us to meet the diverse needs of the largest possible swathe of the population in the shortest possible time, and at the lowest possible cost.
 
 When Taiwan was hit by a wave of infections in May this year, the Central Epidemic Command Center (CECC) issued a nationwide level 3 COVID-19 alert, requiring contact information to be supplied when entering and leaving public venues to facilitate accurate contact tracing and notifications should that be needed.
 
@@ -42,6 +42,6 @@ Moreover, accountability can ensure that improvements are made on a rolling basi
 
 Following this interpretation, specific measures have now been taken by telecommunications companies and the judiciary to preclude communications surveillance from accessing the SMS data.
 
-As part of a national strategy for digital development, accountability is both a passive way to allay concerns and provide peace of mind and an active way to make the results of public-private partnerships a reality. For example, our Presidential Hackathon, which is entering its fourth year, serves as an opportunity for the public and private sectors to work together to come up with innovative ways of linking data across sectors and use digital technology to resolve social problems. The Presidential Hackathon does not offer prize money, but the systems designed by winning teams are assured government promotion, the team is invited to be part of government initiatives, and government assistance is offered to find opportunities for commercial application.
+As part of a national strategy for digital development, accountability is both a passive way to allay concerns and provide peace of mind and an active way to make the results of people-public-private partnerships a reality. For example, our Presidential Hackathon, which is entering its fourth year, serves as an opportunity for the public and private sectors to work together to come up with innovative ways of linking data across sectors and use digital technology to resolve social problems. The Presidential Hackathon does not offer prize money, but the systems designed by winning teams are assured government promotion, the team is invited to be part of government initiatives, and government assistance is offered to find opportunities for commercial application.
 
 As Taiwan’s digital minister, what digital means foremost to me is stimulation of social innovation by increasing the connections between people through technology. In other words, the emphasis is on alignment and accountability, whereby good ideas are taken seriously, and partners can be sought out to work together, establishing a virtuous cycle that leads to innovative, inclusive, and sustainable digital development. To put it in another way, only when people from different sectors, fields, and roles join forces can our digital development be faster, higher, and stronger— together.
