--- a/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -24,7 +24,9 @@ Some people may wonder how to cater to the needs of members of the public in our
 
 Indeed, in a pluralistic society, people's needs are ever shifting, and regardless of whether governments are willing to address them, there will always be people willing to tackle new problems with digital innovation. A smart national digital governance policy should not be designed to dominate or prohibit these attempts, but to find ways to align with them, which I believe is the first aspect of digital governance: alignment.
 
-When the COVID-19 outbreak struck last year, masks, the most essential personal protective equipment, were in short supply and the central government had to adopt a “real name registration system” for ordering face masks. Everyone wanted to know where to buy them, though, and “mask map” applications quickly appeared; the government didn't discourage such efforts, but instead released the addresses of pharmacies selling masks and the number of masks they had in stock through open data, keeping the apps up to date. In less than a week, more than a hundred map applications for mask availability were developed by people from all walks of life, with a wide range of configurations for use on the messaging app LINE and with voice assistance options for the blind. In other words, an alliance was forged between government, civic technologists, and the private sector, which allowed us to meet the diverse needs of the largest possible swathe of the population in the shortest possible time, and at the lowest possible cost.
+When the COVID-19 outbreak struck last year, masks, the most essential personal protective equipment, were in short supply and the central government had to adopt a “real name registration system” for ordering face masks. Everyone wanted to know where to buy them, though, and “mask map” applications quickly appeared; the government didn't discourage such efforts, but instead released the addresses of pharmacies selling masks and the number of masks they had in stock through open data, keeping the apps up to date.
+
+In less than a week, more than a hundred map applications for mask availability were developed by people from all walks of life, with a wide range of configurations for use on the messaging app LINE and with voice assistance options for the blind. In other words, an alliance was forged between government, civic technologists, and the private sector, which allowed us to meet the diverse needs of the largest possible swathe of the population in the shortest possible time, and at the lowest possible cost.
 
 When Taiwan was hit by a wave of infections in May this year, the Central Epidemic Command Center (CECC) issued a nationwide level 3 COVID-19 alert, requiring contact information to be supplied when entering and leaving public venues to facilitate accurate contact tracing and notifications should that be needed.
 
@@ -42,6 +44,10 @@ Moreover, accountability can ensure that improvements are made on a rolling basi
 
 Following this interpretation, specific measures have now been taken by telecommunications companies and the judiciary to preclude communications surveillance from accessing the SMS data.
 
-As part of a national strategy for digital development, accountability is both a passive way to allay concerns and provide peace of mind and an active way to make the results of people-public-private partnerships a reality. For example, our Presidential Hackathon, which is entering its fourth year, serves as an opportunity for the public and private sectors to work together to come up with innovative ways of linking data across sectors and use digital technology to resolve social problems. The Presidential Hackathon does not offer prize money, but the systems designed by winning teams are assured government promotion, the team is invited to be part of government initiatives, and government assistance is offered to find opportunities for commercial application.
+As part of a national strategy for digital development, accountability is both a passive way to allay concerns and provide peace of mind and an active way to make the results of people-public-private partnerships a reality. For example, our Presidential Hackathon, which is entering its fourth year, serves as an opportunity for the public and private sectors to work together to come up with innovative ways of linking data across sectors and use digital technology to resolve social problems.
 
-As Taiwan’s digital minister, what digital means foremost to me is stimulation of social innovation by increasing the connections between people through technology. In other words, the emphasis is on alignment and accountability, whereby good ideas are taken seriously, and partners can be sought out to work together, establishing a virtuous cycle that leads to innovative, inclusive, and sustainable digital development. To put it in another way, only when people from different sectors, fields, and roles join forces can our digital development be faster, higher, and stronger— together.
+The Presidential Hackathon does not offer prize money, but the systems designed by winning teams are assured government promotion, the team is invited to be part of government initiatives, and government assistance is offered to find opportunities for commercial application.
+
+As Taiwan’s digital minister, what digital means foremost to me is stimulation of social innovation by increasing the connections between people through technology. In other words, the emphasis is on alignment and accountability, whereby good ideas are taken seriously, and partners can be sought out to work together, establishing a virtuous cycle that leads to innovative, inclusive, and sustainable digital development.
+
+To put it in another way, only when people from different sectors, fields, and roles join forces can our digital development be faster, higher, and stronger— together.
