* sync with zh version

--- a/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -40,7 +40,7 @@ With the SMS system, how do we store the huge amount of data being transmitted o
 
 Accountability in digital innovation puts people's minds at ease as it inspires confidence that digital products will do what they say they will in ways that do not compromise user privacy; this is why personal data protection and cyber security are becoming increasingly important in digital development.
 
-Moreover, accountability can ensure that improvements are made on a rolling basis as new challenges arise; for example, a judge found that evidence in a criminal investigation included data from the 1922 text messaging system and questioned its legality. Following discussions, the Ministry of Justice concluded that the 1922 SMS system does not constitute a private communication and should not be accessed as per the Communication Security and Surveillance Act.
+Moreover, accountability can ensure that improvements are made on a rolling basis as new challenges arise; for example, a judge found that evidence in a criminal investigation included data from the 1922 text messaging system and questioned its legality. Following discussions, the Ministry of Justice concluded that the 1922 SMS system does not constitute a private communication and should not be accessed as per the Communication Security and Surveillance Act; mobile network operators and judicial authorities are now preparing measures to rule out 1922 SMS from law enforcement surveillance.
 
 Following this interpretation, specific measures have now been taken by telecommunications companies and the judiciary to preclude communications surveillance from accessing the SMS data.
 
