fix image url markup

--- a/_i18n/en/_posts/2021-08-19-「選每一邊站」.md
+++ b/_i18n/en/_posts/2021-08-19-「選每一邊站」.md
@@ -22,3 +22,5 @@ Prescribing a position and drawing conclusions too quickly are common ways to ir
 Interestingly, there is often a fine line between getting closer and angering each other. For example, we invite colleagues in public affairs to think about how to invite relevant ministries to participate. Someone replied "respectfully invites members of the XX Ministry to participate" in the form of official documents, and felt that this would be fine. I don’t know that everyone likes to receive such official documents the most. Even if you send a representative to attend, you may have reservations and formal participation in experience sharing. To put it another way, if you can take the initiative to "choose each side," explain the context of the meeting from the standpoint of all parties, and take the initiative to inquire about your wishes and ideas, colleagues in other ministries will often be more willing to invest and become partners in advancing the issue together. 
 
 Listen to each other's difficulties, it is possible to start a dialogue. Through dialogue, it is possible for us to understand each other and come up with further solutions. In the collaborative meeting, in this way, pig farmers, animal protection groups, temple authorities, folklore experts and competent authorities can listen to each other face to face and discuss alternative ritual plans that take into account the freedom of religious sacrifice and the welfare of animals. 
+
+![annoying each other in one second/close the distance in one second](/assets/imgs/227d107a1cb86fee05045313785baa4fc14c901a.jpeg)
