--- a/_i18n/zh-TW/_posts/2021-08-19-「選每一邊站」.md
+++ b/_i18n/zh-TW/_posts/2021-08-19-「選每一邊站」.md
@@ -23,4 +23,4 @@ tags:
 
 聆聽彼此的難處，才有可能展開對話。透過對話，我們也才有可能瞭解彼此，想出更進一步的解決方法。在協作會議上，就是以此方式讓養豬戶、動保團體、廟方、民俗專家和主管機關，面對面彼此傾聽，共同討論兼顧宗教祭祀自由及動物福祉的替代儀式方案。
 
-/assets/imgs/227d107a1cb86fee05045313785baa4fc14c901a.jpeg
+![一秒惹怒對方/一秒拉近距離](/assets/imgs/227d107a1cb86fee05045313785baa4fc14c901a.jpeg)
